2008-03-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/UFsparse_download.sh: -->
	* src/CHOLMOD/: update to CHOLMOD version 1.6 (Nov.2007)

2008-03-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dsCMatrix.c (dsCMatrix_LDL_D): even faster utility with same
	functionality; barely tested in
	* tests/factorizing.R

	* src/Csparse.c (diag_tC): new functionality to enable faster
	determinant(<dsCMatrix>, .) in
	* R/dsCMatrix.R

2008-03-17 18:53  Douglas Bates <bates@stat.wisc.edu>

	* R/CHMfactor.R, inst/include/Matrix.h, inst/include/Matrix_stubs.c,
	  src/CHMfactor.c, src/CHMfactor.h,
	  man/CHMfactor-class.Rd, src/init.c, tests/factorizing.R:
	  Log-determinant of the parent matrix from a CHMfactor object as
	  chm_factor_ldetL2; documentation and support

2008-03-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dsCMatrix.R: enable determinant(<dsCMatrix>, .) via chol(.)

2008-03-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dsCMatrix.R: setAs(., "dsCMatrix") but with a deprecation
	warning.

2008-03-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): bug-fix release 0.999375-6

	* R/diagMatrix.R (diag2tT.u): utility to be smarter in
	  <diagonal> o <sparse_triangular>
	  setAs(., "nMatrix") added.

	* R/diagMatrix.R (Diagonal): Diagonal(4, x=3) now works too

	* R/Auxiliaries.R (.diagU2N): more careful coercion in 2 steps
		new argument 'checkDense = FALSE'.


2008-03-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dgeMatrix.c (dgeMatrix_exp): fix the octave-origin bug in the
	back-permutation of the matrix exponential.

	* tests/matr-exp.R: test the fix (for an example where expm() was wrong).

	* DESCRIPTION (Date,Version): ready to release 0.999375-5

	* tests/simple.R: testing diagN2U

2008-03-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (diagN2U): interface to

	* src/Csparse.c (Csparse_diagN2U): .Call()able SEXP version of chm_diagN2U()
