@@ -46,12 +46,23 @@
 \alias{rbind2,atomicVector,ldiMatrix-method}
 \alias{diag,ddiMatrix-method}
 \alias{diag,ldiMatrix-method}
+%
+\alias{Ops,ddiMatrix,sparseMatrix-method}
+\alias{Ops,sparseMatrix,ddiMatrix-method}
+\alias{Ops,ldiMatrix,sparseMatrix-method}
+\alias{Ops,sparseMatrix,ldiMatrix-method}
+\alias{Ops,ddiMatrix,numeric-method}
+\alias{Ops,numeric,ddiMatrix-method}
+\alias{Ops,ldiMatrix,numeric-method}
+\alias{Ops,numeric,ldiMatrix-method}
+\alias{Ops,ddiMatrix,ANY-method}
+\alias{Ops,ANY,ddiMatrix-method}
+\alias{Ops,ldiMatrix,ANY-method}
+\alias{Ops,ANY,ldiMatrix-method}
 %-end{H.Hack}
 \alias{Ops,diagonalMatrix,diagonalMatrix-method}
 \alias{Ops,diagonalMatrix,ddiMatrix-method}
 \alias{Ops,ddiMatrix,diagonalMatrix-method}
-\alias{Ops,diagonalMatrix,ANY-method}
-\alias{Ops,ANY,diagonalMatrix-method}
 \alias{t,diagonalMatrix-method}
 \alias{show,diagonalMatrix-method}
 \alias{\%*\%,dgeMatrix,diagonalMatrix-method}
